# tap-googleads

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-googleads.sh  tox.ini
.github/workflows/: ci.yml
tap_googleads/: auth.py  client.py  streams.py  tap.py  utils.py
tap_googleads/schemas/: ad_group.json  ad_group_performance.json  adgroups_performance.json  campaign.json  campaign_label.json  campaign_performance.json  campaign_performance_by_age_range_and_device.json  campaign_performance_by_gender_and_device.json  campaign_performance_by_location.json  conversion_by_location.json  customer.json  customer_hierarchy.json  geo_target_constant.json  geo_target_in_usa.json
tap_googleads/tests/: __init__.py  test_base_credentials.py  test_core.py  test_customer_not_found.py  test_proxy_oauth.py  test_streams.py  test_utils.py  utils.py
